# Project-Space

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Resource.aps  icon.aps  project_space.rc  resource.h
Release/resources/models/: smallfighter.mtl  spacepod.mtl
Release/resources/shaders/: default_model.frag  default_model.vert
libraries/glad/WIN32/: GLAD.lib
libraries/glad/WIN64/: GLAD.lib
libraries/glad/include/glad/: glad.h
libraries/glm/WIN32/: GLM.lib
libraries/glm/WIN64/: GLM.lib
libraries/stb_image/WIN32/: stb_image.lib
libraries/stb_image/WIN64/: stb_image.lib
resources/models/: freight.mtl  planet.mtl  smallfighter.mtl  sun.mtl
resources/shaders/: default_batch.frag  default_batch.vert  default_model.frag  default_model.vert  default_text.frag  default_text.vert  text_render.frag  text_render.vert
resources/testfiles/: testSystem.txt
src/: main.cpp
src/engine/body_systems/: Sphere.cpp  Sphere.h  body.cpp  body.h  body_system.cpp  body_system.h
src/engine/console/: console.cpp  console.h
src/engine/data_storage/: buffer_utils.cpp  buffer_utils.h  filestorage.cpp  filestorage.h  saveable.cpp  saveable.h
src/engine/graphics/: asset_manager.cpp  asset_manager.h  batch_renderer.cpp  batch_renderer.h  buffers.cpp  buffers.h  camera.cpp  camera.h  font.cpp  font.h  light.h  model.cpp  model.h  model_renderer.cpp  model_renderer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  text.cpp  text.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h  ui.h  vertex_array.cpp  vertex_array.h  window.cpp  window.h  window_data.h
src/engine/graphics/ui/: button_component.cpp  button_component.h  checkbox_component.cpp  checkbox_component.h  layout.cpp  (+17 more)
src/engine/io/: event.cpp  event.h  event_receiver.h  io.cpp  keyboard.h  mouse.h
src/engine/randgen/: noise_map.cpp  noise_map.h  randomgen.cpp  randomgen.h
src/engine/states/: game_state.cpp  game_state.h
src/gameplay/: event.cpp  event.h  event_sheet.csv  unistd.h
src/gameplay/events/: event.cpp  event.h
src/gameplay/states/: load_game_state.cpp  load_game_state.h  main_menu_state.cpp  main_menu_state.h  new_game_state.cpp  new_game_state.h  play_state.cpp  play_state.h  settings_state.cpp  settings_state.h
src/testing/: test_bodysystems.cpp  test_bodysystems.h  test_filestorage.cpp  test_filestorage.h  test_gamestate.cpp  test_gamestate.h  test_noisemap.cpp  test_noisemap.h  test_randomgen.cpp  test_randomgen.h  test_window.cpp  test_window.h  tests.cpp  tests.h
